--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # dependencies
 /node_modules
 /backend/key.js
+/backent/upassword.js
+/backent/umail.js
 # profiling files
 chrome-profiler-events*.json
 
